--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "Mo Saeed Nahlous",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
     "concurrently": "^6.2.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
+    "mongoose": "^5.13.7",
     "nodemon": "^2.0.12"
   }
 }
